--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
             <img src="imgs/image-post.svg" alt="">
           </div>
           <div class="text">
-            <h6>HTML5 e Semântica</h6>
-            <p>Aprenda a usar a mais recente versão do HTML e crie páginas web bem estruturadas e otimizadas para os mecanismos de busca.</p>
+            <h6>CSS3 e Estilização Avançada</h6>
+            <p>Explore os recursos avançados do CSS3 para criar layouts responsivos, animações incríveis e designs atrativos.</p>
           </div>
         </div>
         <div class="card-post">
@@ -132,8 +132,8 @@
             <img src="imgs/image-post.svg" alt="">
           </div>
           <div class="text">
-            <h6>HTML5 e Semântica</h6>
-            <p>Aprenda a usar a mais recente versão do HTML e crie páginas web bem estruturadas e otimizadas para os mecanismos de busca.</p>
+            <h6>Javascript Moderno</h6>
+            <p>Aprenda a programar com Javascript moderno e torne suas páginas interativas e dinâmicas, proporcionando uma experiência única.</p>
           </div>
         </div>
         <div class="card-post">
@@ -142,8 +142,8 @@
             <img src="imgs/image-post.svg" alt="">
           </div>
           <div class="text">
-            <h6>HTML5 e Semântica</h6>
-            <p>Aprenda a usar a mais recente versão do HTML e crie páginas web bem estruturadas e otimizadas para os mecanismos de busca.</p>
+            <h6>Frameworks Front-end</h6>
+            <p>Descubra como utilizar frameworks populares como React, Angular e Vue.js para criar aplicações web completas e eficientes.</p>
           </div>
         </div>
         <div class="card-post">
@@ -152,8 +152,8 @@
             <img src="imgs/image-post.svg" alt="">
           </div>
           <div class="text">
-            <h6>HTML5 e Semântica</h6>
-            <p>Aprenda a usar a mais recente versão do HTML e crie páginas web bem estruturadas e otimizadas para os mecanismos de busca.</p>
+            <h6>Design Responsivo</h6>
+            <p>Aprenda a criar designs responsivos e mobile-first que se adaptam perfeitamente a diferentes tamanhos de tela.</p>
           </div>
         </div>
       </div>
