--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 <body>
   <header>
     <div class="container">
-      <a href="./">
+      <a href="./" class="logo">
         <img src="./imgs/logo.svg" alt="Logo Structboost" title="Logo Structboost">
       </a>
+      <button class="btn-mobile">
+        <img src="./imgs/icon-hamburger.svg" alt="Icone de navegação">
+      </button>
       <nav>
         <ul>
           <li>
